--- a/SistemaVentasBatia/ClientApp/src/app/exclusivo/prospecto/nuevo/nuevo.component.html
+++ b/SistemaVentasBatia/ClientApp/src/app/exclusivo/prospecto/nuevo/nuevo.component.html
@@ -8,30 +8,28 @@
         <div class="tab-pane fade show active" role="tabpanel" id="general">
 
             <div class="row">
-                <div class="col-sm-12 col-md-4 mb-3">
+                <div class="col-xl-4 col-sm-6  mb-3">
                     <div class="form-floating">
                         <input type="text" class="form-control validacion-prospecto" [(ngModel)]="pro.nombreComercial" data-campo="nombreComercial" id="txtProspectoNombre">
                         <label for="txtProspectoNombre">Nombre Comercial</label>
                     </div>
                     <span *ngIf="ferr('NombreComercial')" class="text-danger">{{ terr('NombreComercial') }}</span>
                 </div>
-                <div class="col-sm-12 col-md-4 mb-3">
+                <div class="col-xl-4 col-sm-6 mb-3">
                     <div class="form-floating">
                         <input type="text" class="form-control" [(ngModel)]="pro.razonSocial" id="txtProspectoRazonSocial">
                         <label for="txtProspectoRazonSocial">Razón Social</label>
                     </div>
                     <span *ngIf="ferr('RazonSocial')" class="text-danger">{{ terr('RazonSocial') }}</span>
                 </div>
-                <div class="col-md-4 mb-3">
+                <div class="col-xl-4 col-sm-4 mb-3">
                     <div class="form-floating">
                         <input type="text" class="form-control validacion-prospecto" [(ngModel)]="pro.rfc" data-campo="rfc" id="txtProspectoRfc">
                         <label for="txtProspectoRfc">RFC</label>
                     </div>
                     <span *ngIf="ferr('Rfc')" class="text-danger">{{ terr('Rfc') }}</span>
                 </div>
-            </div>
-            <div class="row">
-                <div class="col-md-8 col-sm-12 mb-3">
+                <div class="col-xl-8 col-sm-8 mb-3">
                     <div class="form-floating">
                         <input type="text" class="form-control" [(ngModel)]="pro.domicilioFiscal" id="txtProspectoDomicilioFiscal">
                         <label for="txtProspectoDomicilioFiscal">Domicilio Fiscal</label>
@@ -39,36 +37,34 @@
                     <span *ngIf="ferr('DomicilioFiscal')" class="text-danger">{{ terr('DomicilioFiscal') }}</span>
 
                 </div>
-                <div class="col-md-4 col-sm-12 mb-3">
+                <div class="col-xl-4 col-sm-6 mb-3">
                     <div class="form-floating">
                         <input type="text" class="form-control" [(ngModel)]="pro.nombreContacto" id="txtProspectoContacto">
                         <label for="txtProspectoContacto">Contacto</label>
                     </div>
                     <span *ngIf="ferr('NombreContacto')" class="text-danger">{{ terr('NombreContacto') }}</span>
                 </div>
-            </div>
-            <div class="row">
-                <div class="col-md-3 col-sm-12 mb-3">
+                <div class="col-xl-3 col-sm-6 mb-3">
                     <div class="form-floating">
                         <input type="text" class="form-control" [(ngModel)]="pro.emailContacto" id="txtProspectoEmailContacto">
                         <label for="txtProspectoEmailContacto">Email Contacto</label>
                     </div>
                     <span *ngIf="ferr('EmailContacto')" class="text-danger">{{ terr('EmailContacto') }}</span>
                 </div>
-                <div class="col-md-2 col-sm-12 mb-3">
+                <div class="col-xl-2 col-sm-4 mb-3">
                     <div class="form-floating">
                         <input type="text" class="form-control" [(ngModel)]="pro.numeroContacto" id="txtProspectoTelefonoContacto">
                         <label for="txtProspectoTelefonoContacto">Tel. Contacto</label>
                     </div>
                     <span *ngIf="ferr('NumeroContacto')" class="text-danger">{{ terr('NumeroContacto') }}</span>
                 </div>
-                <div class="col-md-2 col-sm-12 mb-3">
+                <div class="col-xl-2 col-sm-3 mb-3">
                     <div class="form-floating">
                         <input type="text" class="form-control" [(ngModel)]="pro.extContacto" id="txtProspectoContactoExt">
                         <label for="txtProspectoContactoExt">Extensión</label>
                     </div>
                 </div>
-                <div class="col-sm-12 col-md-5 col-12 mb-3">
+                <div class="col-xl-5 col-sm-5 col-12 mb-3">
                     <div class="form-floating">
                         <select class="form-select" aria-label="IdPuesto" [(ngModel)]="pro.idTipoIndustria" id="slTipoIndustria">
                             <option value=0>Seleccione...</option>
@@ -84,14 +80,14 @@
             <br />
             <div class="row col-12 mb-3">
                 <div class="d-flex align-items-center">
-                    <div class="col-md-3 col-sm-6 col-4" *ngFor="let d of docs">
+                    <div class="col-xl-3 col-sm-6 col-4" *ngFor="let d of docs">
                         <div class="form-check">
                             <label class="form-check-label">
                                 <input class="form-check-input" type="checkbox" id="d.nom" [value]="d.id" [(ngModel)]="d.act" /> {{ d.nom }}
                             </label><br />
                         </div>
                     </div>
-                    <div class="col-md-6 col-sm-6 col-4">
+                    <div class="col-xl-6 col-sm-6 col-4">
                         <div class="float-end">
                             <button type="button" (click)="guarda()" class="btn btn-outline-success" id="btnGuardarProspecto" [disabled]="isLoading"><i class="fa-solid fa-save"></i> Guardar</button>
                         </div>
