--- a/SistemaVentasBatia/ClientApp/src/app/exclusivo/exclusivo.component.html
+++ b/SistemaVentasBatia/ClientApp/src/app/exclusivo/exclusivo.component.html
@@ -2,7 +2,7 @@
 <div class="container-fluid">
     <div class="row">
         <lat-menu></lat-menu>
-        <div class="col-md-9 col-lg-10 px-md-4 mx-auto">
+        <div class="col-lg-10 col-md-10 col-sm-11 col-11 mx-auto">
             <router-outlet></router-outlet>
         </div>
     </div>
