--- a/SistemaVentasBatia/ClientApp/src/app/exclusivo/menu/latmenu.component.html
+++ b/SistemaVentasBatia/ClientApp/src/app/exclusivo/menu/latmenu.component.html
@@ -1,11 +1,11 @@
-<nav id="sidebarMenu" class="col-md-auto d-md-none  sidebar collapse-horizontal collapse text-center">
+<nav id="sidebarMenu" class="col-xl-auto d-xl-none  sidebar collapse-horizontal collapse text-center">
     <ul class="nav d-flex flex-column justify-content-center h-100 pt-2">
         <li class="nav-item mb-3 text-sm-start text-md-center">
             <a class="nav-link" data-bs-toggle="collapse" data-bs-target="#sidebarMenu" [routerLink]="['/exclusivo']" [routerLinkActive]='["active"]' [routerLinkActiveOptions]="{ exact: true }" aria-current="page">
                 <div data-bs-toggle="tooltip" data-bs-placement="right">
                     <span> <i class="fa-solid fa-house fa-2x mb-2"></i></span>
-                    <div class="d-block d-md-none"><h6>HOME</h6></div>
-                    <hr class="d-block d-md-none" />
+                    <div class="d-block d-xl-none"><h6>HOME</h6></div>
+                    <hr class="d-block d-xl-none" />
                 </div>
             </a>
         </li>
@@ -14,8 +14,8 @@
             <a class="nav-link" data-bs-toggle="collapse" data-bs-target="#sidebarMenu" [routerLink]="['/exclusivo/prospecto']" [routerLinkActive]='["active"]' aria-current="page">
                 <div data-bs-toggle="tooltip" data-bs-placement="right">
                     <span> <i class="fa-solid fa-business-time fa-2x mb-2"></i></span>
-                    <div class=" d-block d-md-none"><h6>PROSPECTOS</h6></div>
-                    <hr class="d-block d-md-none" />
+                    <div class=" d-block d-xl-none"><h6>PROSPECTOS</h6></div>
+                    <hr class="d-block d-xl-none" />
                 </div>
             </a>
         </li>
@@ -33,8 +33,8 @@
             <a class="nav-link" data-bs-toggle="collapse" data-bs-target="#sidebarMenu" [routerLink]="['/exclusivo/cotiza/0']" [routerLinkActive]='["active"]' aria-current="page">
                 <div data-bs-toggle="tooltip" data-bs-placement="right">
                     <span> <i class="fa-solid fa-file-invoice-dollar fa-2x mb-2"></i></span>
-                    <div class=" d-block d-md-none"><h6>COTIZACIONES</h6></div>
-                    <hr class="d-block d-md-none" />
+                    <div class=" d-block d-xl-none"><h6>COTIZACIONES</h6></div>
+                    <hr class="d-block d-xl-none" />
                 </div>
             </a>
         </li>
@@ -42,8 +42,8 @@
             <a class="nav-link" data-bs-toggle="collapse" data-bs-target="#sidebarMenu" [routerLink]="['/exclusivo/catalogo']" [routerLinkActive]='["active"]' aria-current="page">
                 <div data-bs-toggle="tooltip" data-bs-placement="right">
                     <span> <i class="fa-solid fa-gears fa-2x mb-2"></i></span>
-                    <div class=" d-block d-md-none"><h6>CONFIGURACION</h6></div>
-                    <hr class="d-block d-md-none" />
+                    <div class=" d-block d-xl-none"><h6>CONFIGURACION</h6></div>
+                    <hr class="d-block d-xl-none" />
                 </div>
             </a>
         </li>
@@ -51,8 +51,8 @@
             <a class="nav-link" data-bs-toggle="collapse" data-bs-target="#sidebarMenu" [routerLink]="['/exclusivo/catalogo']" [routerLinkActive]='["active"]' aria-current="page">
                 <div data-bs-toggle="tooltip" data-bs-placement="right">
                     <span> <i class="fa-solid fa-rectangle-list fa-2x"></i></span>
-                    <div class=" d-block d-md-none"><h6>REPORTES</h6></div>
-                    <hr class="d-block d-md-none" />
+                    <div class=" d-block d-xl-none"><h6>REPORTES</h6></div>
+                    <hr class="d-block d-xl-none" />
                 </div>
             </a>
         </li>
@@ -60,8 +60,8 @@
             <a *ngIf="isDarkTheme" class="nav-link" data-bs-toggle="collapse" data-bs-target="#sidebarMenu" (click)="toggleTheme()">
                 <div data-bs-toggle="tooltip" data-bs-placement="right">
                     <span> <i class="fa-solid fa-sun fa-2x mb-2" style="color: lightgray;"></i></span>
-                    <div class=" d-block d-md-none"><h6>TEMA</h6></div>
-                    <hr class="d-block d-md-none" />
+                    <div class=" d-block d-xl-none"><h6>TEMA</h6></div>
+                    <hr class="d-block d-xl-none" />
                 </div>
             </a>
         </li>
@@ -69,8 +69,8 @@
             <a *ngIf="!isDarkTheme" class="nav-link" data-bs-toggle="collapse" data-bs-target="#sidebarMenu" (click)="toggleTheme()">
                 <div data-bs-toggle="tooltip" data-bs-placement="right">
                     <span> <i class="fa-solid fa-moon fa-2x mb-2" style="color: #333333;"></i></span>
-                    <div class=" d-block d-md-none"><h6>TEMA</h6></div>
-                    <hr class="d-block d-md-none" />
+                    <div class=" d-block d-xl-none"><h6>TEMA</h6></div>
+                    <hr class="d-block d-xl-none" />
                 </div>
             </a>
         </li>
@@ -87,7 +87,7 @@
     </ul>
 </nav>
 <!--MENU ESTATICO FS-->
-<nav id="sidebarMenustatic" class="col-md-auto d-none d-md-block sidebar collapse">
+<nav id="sidebarMenustatic" class="col-xl-auto d-none d-xl-block sidebar collapse">
     <ul class="nav d-flex flex-column justify-content-center h-100 pt-2">
         <li class="nav-item mb-3 text-sm-start text-md-center">
             <a class="nav-link" [routerLink]="['/exclusivo']" [routerLinkActive]='["active"]' [routerLinkActiveOptions]="{ exact: true }" aria-current="page">
