--- a/SistemaVentasBatia/ClientApp/src/app/exclusivo/prospecto/prospecto.component.html
+++ b/SistemaVentasBatia/ClientApp/src/app/exclusivo/prospecto/prospecto.component.html
@@ -7,7 +7,7 @@
     </div>
     <div>
         <div class="row d-flex align-items-center">
-            <div class="col-md-3 col-12 mb-3">
+            <div class="col-xl-3 col-sm-5 col-12 mb-3">
                 <div class="form-floating">
                     <input type="text" class="form-control" [(ngModel)]="lspro.keywords" id="Keywords" (keyup)="onKeywordsInput()">
                     <label for="Keywords">Nombre Comercial</label>
@@ -15,7 +15,7 @@
             </div>
 
 
-            <div class="col-md-3 col-6 mb-3">
+            <div class="col-xl-3 col-sm-3 col-6 mb-3">
                 <div class="form-floating">
                     <select class="form-select" [(ngModel)]="lspro.idEstatusProspecto" aria-label="IdEstatusProspecto" (change)="lista()" id="ddlEstatusProspecto">
                         <option value="0">Seleccione ...</option>
@@ -24,7 +24,7 @@
                     <label for="ddlEstatusProspecto">Estatus:</label>
                 </div>
             </div>
-            <div class="col-md-6 col-6 mb-3 text-end">
+            <div class="col-xl-6 col-sm-4 col-6 mb-3 text-end">
                 <a (click)="nuevo()" class="btn btn-outline-primary"><i class="fa-solid fa-plus"></i> Nuevo Prospecto</a>
             </div>
         </div>
@@ -38,44 +38,44 @@
             <thead class="sticky-top">
                 <tr>
                     <th class="ps-2">Lista de prospectos</th>
-                    <th class="col-md-2"></th>
+                    <th class="col-xl-2"></th>
                 </tr>
             </thead>
             <tbody>
                 <tr *ngFor="let prospecto of lspro.prospectos">
-                    <td class="col-10 col-md-10">
+                    <td class="col-10 col-xl-10">
                         <div class="row mb-2">
-                            <div class="col-sm-3 col-6 col-md-4">
+                            <div class="col-xl-4 col-sm-6 col-6">
                                 <span class="badge">Nombre Comercial:</span>
                                 <div class="ms-2">{{ prospecto.nombreComercial }}</div>
                             </div>
-                            <div class="col-sm-2 col-6 col-md-2">
+                            <div class="col-xl-2 col-sm-3 col-6">
                                 <span class="badge">RFC:</span>
                                 <div class="ms-2">{{ prospecto.rfc }}</div>
                             </div>
-                            <div class="col-sm-2 col-6 col-md-2">
+                            <div class="col-xl-2 col-sm-3 col-6">
                                 <span class="badge">Teléfono:</span>
                                 <div class="ms-2">{{ prospecto.numeroContacto }}</div>
                             </div>
-                            <div class=" col-sm-4 col-6 col-md-4">
+                            <div class="col-xl-4 col-sm-3 col-6">
                                 <span class="badge">Razón Social:</span>
                                 <div class="ms-2">{{ prospecto.razonSocial }}</div>
                             </div>
-                            <div [ngClass]="user.idAutoriza ? 'col-sm-5 col-12 col-md-6' : 'col-md-8 col-sm-8 col-12'">
+                            <div [ngClass]="user.idAutoriza ? 'col-xl-6 col-sm-9 col-12' : 'col-xl-8 col-sm-9 col-12'">
                                 <span class="badge">Domicilio Fiscal:</span>
                                 <div class="ms-2">{{ prospecto.domicilioFiscal }}</div>
                             </div>
-                            <div class="col-sm-2 col-6 col-md-2">
+                            <div class="col-xl-2 col-sm-3 col-6">
                                 <span class="badge">Fecha Alta:</span>
                                 <div class="ms-2">{{ prospecto.fechaAlta | date: 'dd-MM-yyyy' }}</div>
                             </div>
-                            <div *ngIf="user.idAutoriza === 1" class="col-sm-5 col-6 col-md-4">
+                            <div *ngIf="user.idAutoriza === 1" class="col-xl-4 col-sm-9 col-6 ">
                                 <span class="badge">Usuario Alta:</span>
                                 <div class="ms-2">{{ prospecto.representanteLegal }}</div>
                             </div>
                         </div>
                     </td>
-                    <td class="mb-3 text-center col-2 col-md-2">
+                    <td class="mb-3 text-center col-2 col-xl-2">
                         <button type="submit" class="btn btn-sm btn-outline-primary mb-1" [routerLink]="['/exclusivo/cotiza/' + prospecto.idProspecto]" data-bs-toggle="tooltip" title="Cotizaciones">
                             <i class="fa-solid fa-file-invoice-dollar fa-2x"></i>
                         </button>
